<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Place_name_"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/editName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="Starbucks"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Impersonal_description_"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/editDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:gravity="top"
            android:hint="Coffee and bakery. Works util midnigth."/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tags__separated_by_spaces__"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/editTags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="coffee bakery wi-fi"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Website_"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/editURL"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="http://"/>
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Create"/>
    </LinearLayout>
</ScrollView>