<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/Notifications">
        <ListPreference
            android:key="refresh"
            android:title="@string/Refresh_interval"
            android:entries="@array/prefsRefreshIntervalTitles"
            android:entryValues="@array/prefsRefreshIntervalValues"
            android:defaultValue="5"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Appearance">
        <ListPreference
            android:key="loadphotos"
            android:title="@string/LoadPhotos"
            android:entries="@array/prefsLoadImages"
            android:entryValues="@array/prefsLoadImagesValues"
            android:defaultValue="Always"
            android:persistent="true"/>
<!--        <ListPreference
            android:key="theme"
            android:title="@string/Theme"
            android:entries="@array/prefsThemesTitles"
            android:entryValues="@array/prefsThemesValues"
            android:defaultValue="0"
            android:persistent="true"/>-->
    </PreferenceCategory>
</PreferenceScreen>